// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with 1 expense correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling: 
    $11.23
  </h1>
</div>
`;

exports[`should render ExpenseSummary with more than one expenses correctly 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling: 
    $11,234.23
  </h1>
</div>
`;
